--- a/src/components/elan-visuals/skill-map.module.scss
+++ b/src/components/elan-visuals/skill-map.module.scss
@@ -38,7 +38,7 @@
   display: flex;
   flex-direction: column;
   gap: $portfolio-spacer-0-5x;
-  min-width: 120px;
+  min-width: 0;
 }
 
 .categoryHeader {
